Correccion carga de asientos

--- a/ERP_Alusoft/Components/Layout/NavMenu.razor
+++ b/ERP_Alusoft/Components/Layout/NavMenu.razor
@@ -23,7 +23,7 @@
 		</div>
 		<div class="nav-item px-3">
 			<NavLink class="nav-link" href="Asientos">
-				<span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>Asientos
+				<span class="bi bi-cash-coin fs-5" style="margin-top:-30px;" aria-hidden="true"></span>Asientos
 			</NavLink>
 		</div>
 	</nav>
