Se agrego ABM Gastos y Detalle Plan de Cuenta

--- a/ERP_Alusoft/Components/Layout/NavMenu.razor
+++ b/ERP_Alusoft/Components/Layout/NavMenu.razor
@@ -26,5 +26,10 @@
 				<span class="bi bi-cash-coin fs-5" style="margin-top:-30px;" aria-hidden="true"></span>Asientos
 			</NavLink>
 		</div>
+		<div class="nav-item px-3">
+			<NavLink class="nav-link" href="Gastosfijos">
+				<span class="bi bi-cash fs-5" style="margin-top:-30px;" aria-hidden="true"></span>Gastos Fijos
+			</NavLink>
+		</div>
 	</nav>
 </div>
